--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.13.6",
+    "chart.js": "^2.7.3",
     "react": "^16.8.3",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
   },
