--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.13.6",
     "chart.js": "^2.7.3",
     "react": "^16.8.3",
+    "react-ace": "^6.4.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
